k8s/deployment-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "13"
  creationTimestamp: 2019-08-21T04:27:55Z
  generation: 31
  labels:
    app: ereforestation
  name: ereforestation-deploy
  namespace: default
  resourceVersion: "774324"
  selfLink: /apis/apps/v1/namespaces/default/deployments/ereforestation-deploy
  uid: 0c478b5f-c3cc-11e9-b6db-42010a940175
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ereforestation
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ereforestation
    spec:
      containers:
      - command:
        - /cloud_sql_proxy
        - --dir=/cloudsql
        - -instances=ereforestation:asia-southeast1:ereforestation=tcp:3306
        - -credential_file=/secrets/cloudsql/ereforestation-credentials.json
        image: b.gcr.io/cloudsql-docker/gce-proxy:1.05
        imagePullPolicy: IfNotPresent
        name: cloudsql-proxy
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /secrets/cloudsql
          name: cloudsql-oauth-credentials
          readOnly: true
        - mountPath: /etc/ssl/certs
          name: ssl-certs
      - env:
        - name: MAIL_USERNAME
          valueFrom:
            configMapKeyRef:
              key: MAIL_USERNAME
              name: ereforestation-deploy-config
        - name: MAIL_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MAIL_PASSWORD
              name: ereforestation-deploy-config
        - name: MAIL_SMTP
          valueFrom:
            configMapKeyRef:
              key: MAIL_SMTP
              name: ereforestation-deploy-config
        - name: MAIL_PORT
          valueFrom:
            configMapKeyRef:
              key: MAIL_PORT
              name: ereforestation-deploy-config
        - name: DATABASE_USERNAME
          valueFrom:
            configMapKeyRef:
              key: DATABASE_USERNAME
              name: ereforestation-deploy-config
        - name: DATABASE_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: DATABASE_PASSWORD
              name: ereforestation-deploy-config
        image: gcr.io/ereforestation/ereforestation-server-image
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 30
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 10
        name: ereforestation-server-image-sha256
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 60
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 30
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: cloudsql-oauth-credentials
        secret:
          defaultMode: 420
          secretName: cloudsql-oauth-credentials
      - hostPath:
          path: /etc/ssl/certs
          type: ""
        name: ssl-certs
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2019-08-23T16:37:22Z
    lastUpdateTime: 2019-08-23T16:37:22Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2019-08-21T04:27:55Z
    lastUpdateTime: 2019-08-23T16:38:09Z
    message: ReplicaSet "ereforestation-deploy-84f7b6dd67" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 31
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
