k8s/ingress-config.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: mcrt-a9a6d66b-dc8d-4a13-8312-3cac73a46cc9
    ingress.kubernetes.io/backends: '{"k8s-be-30093--a6e536242a47b359":"HEALTHY"}'
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/forwarding-rule: k8s-fw-default-ereforestation-ingress--a6e536242a47b359
    ingress.kubernetes.io/https-forwarding-rule: k8s-fws-default-ereforestation-ingress--a6e536242a47b359
    ingress.kubernetes.io/https-target-proxy: k8s-tps-default-ereforestation-ingress--a6e536242a47b359
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-cert: mcrt-a9a6d66b-dc8d-4a13-8312-3cac73a46cc9
    ingress.kubernetes.io/static-ip: k8s-fw-default-ereforestation-ingress--a6e536242a47b359
    ingress.kubernetes.io/target-proxy: k8s-tp-default-ereforestation-ingress--a6e536242a47b359
    ingress.kubernetes.io/url-map: k8s-um-default-ereforestation-ingress--a6e536242a47b359
    networking.gke.io/managed-certificates: ereforestation-endpoint-cert
  creationTimestamp: 2019-08-22T06:23:22Z
  generation: 3
  name: ereforestation-ingress
  namespace: default
  resourceVersion: "866681"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/ereforestation-ingress
  uid: 57663f0e-c4a5-11e9-a832-42010a940005
spec:
  backend:
    serviceName: ereforestation-service
    servicePort: 80
  rules:
  - host: ereforestation.tk
    http:
      paths:
      - backend:
          serviceName: ereforestation-service
          servicePort: 80
        path: /*
status:
  loadBalancer:
    ingress:
    - ip: 35.227.205.29
